--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.2.1",
+    "axios": "^1.13.5",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.0.2",
     "tailwindcss": "^4.2.1"
   },
   "devDependencies": {
